assets/css/theme.css
/*!
 * Mundana Jekyll Theme (https://www.wowthemes.net/mundana-jekyll-theme/)
 */
body {
	overflow-x:hidden;
	padding-top:80px;
}
img {
	max-width:100%;
}
.tofront {
	position:relative;
	z-index:1;
}
.full-width {
	width:100vw;
	position:relative;
	margin-left:-50vw;
	left:50%;
}
a,a:hover {
	transition:all .2s;
	text-decoration:none;
}
a {
	color:#03a87c;
}
a.text-dark:hover {
	color:#03a87c !important;
}
.c-pointer:hover {
	cursor:pointer;
}
.z-index-1 {
	z-index:1;
}
@media (max-width:991.98px) {
	.display-3 {
		font-size:3.5rem;
	}
}
@media (max-width:767.98px) {
	.display-3 {
		font-size:2rem;
	}
}
.row.gap-y>.col,.row.gap-y>[class*="col-"] {
	padding-top:15px;
	padding-bottom:15px;
}
.mt-neg5 {
	margin-top:-5rem;
}
.ml-neg5 {
	margin-left:-5rem;
}
@media (min-width:768px) {
	.h-md-100-v {
		height:100vh;
	}
	.h-md-100 {
		height:100vh;
	}
}
@media (min-width:1200px) {
	.h-xl-300 {
		height:300px;
	}
	.h-max-380 {
		max-height:380px;
	}
}
.btn-round {
	border-radius:30px !important;
}
.btn {
	padding:0.35rem 1.1rem;
	font-size:1rem;
	line-height:1.6;
	border-radius:0.25rem;
	position:relative;
}
.btn:hover,.btn:focus {
	outline:0 !important;
}
.btn .badge {
	position:absolute;
	top:-.625rem;
	right:-.3125rem;
}
.btn-lg,.btn-group-lg>.btn {
	padding:0.65rem 2rem;
	font-size:1.15rem;
	line-height:1.5;
	border-radius:0.3rem;
}
.btn-sm,.btn-group-sm>.btn {
	padding:0.15rem .7rem;
	font-size:0.875rem;
	line-height:1.5;
	border-radius:0.2rem;
}
.btn-link:hover,.btn-link:focus {
	box-shadow:none;
}
.btn-link.btn-primary {
	color:#03a87c;
	border-color:transparent;
}
.btn-link.btn-secondary {
	color:#7832e2;
	border-color:transparent;
}
.btn-link.btn-success {
	color:#03a87c;
	border-color:transparent;
}
.btn-link.btn-info {
	color:#09ebaf;
	border-color:transparent;
}
.btn-link.btn-warning {
	color:#ffde03;
	border-color:transparent;
}
.btn-link.btn-danger {
	color:#ea2f65;
	border-color:transparent;
}
.btn-link.btn-light {
	color:#f8f9fa;
	border-color:transparent;
}
.btn-link.btn-dark {
	color:#212529;
	border-color:transparent;
}
.btn-link.btn-white {
	color:#fff;
	border-color:transparent;
}
.btn-link.btn-purple {
	color:#ad6edd;
	border-color:transparent;
}
.btn-link.btn-salmon {
	color:#ff977a;
	border-color:transparent;
}
.btn-link.btn-cyan {
	color:#35bdff;
	border-color:transparent;
}
.btn-link.btn-gray {
	color:#ced4da;
	border-color:transparent;
}
.btn-link.btn-indigo {
	color:#502c6c;
	border-color:transparent;
}
.btn-link.btn-orange {
	color:#fbb500;
	border-color:transparent;
}
.btn-link.btn-lightblue {
	color:#e8f3ec;
	border-color:transparent;
}
.btn-white {
	background-color:#fff;
}
.input-round {
	border-radius:30px !important;
}
.input-group.input-round input:first-child {
	border-radius:30px 0 0 30px;
}
.input-group.input-round input:last-child {
	border-radius:0px 30px 30px 0px;
}
.navbar {
	font-weight:400;
	padding-top: 0.25rem;
	padding-bottom: 0.25rem;
	transition:top 0.2s ease-in-out;
}
.navbar .highlight .nav-link {
	color:#03a87c !important;
	border:1px solid #03a87c;
	padding:0.3rem 1rem;
	border-radius:3px;
	font-size:.93rem;
}
.navbar .highlight .nav-link:hover {
	background:#03a87c;
	color:#fff !important;
}
.navbar-brand {
	margin-right: 2rem;
	font-size: 1.55rem;
  	font-family: "Georgia","Times New Roman",serif;
}
@media (min-width: 576px) {
	.navbar-expand-lg > .container,
	.navbar-expand-lg > .container-fluid {
		padding-right: inherit;
    	padding-left: inherit;
	}
}
.navbar-brand img {
	max-width: 200px;
    min-width: 150px;
}
.dropdown-item {
	font-weight:400;
}
.dropdown-menu {
	border:0;
	text-transform:none;
	box-shadow:0 10px 25px 0 rgba(0,0,0,0.3);
}
@media (min-width:768px) {
	.dropdown-menu:before {
		content:'';
		top:-8px;
		position:absolute;
		left:50px;
		border-top:16px solid #fff;
		border-left:16px solid #fff;
		-webkit-transform:rotate(45deg);
		transform:rotate(45deg);
	}
}
.navbar-light .navbar-brand {
	color:rgba(0,0,0,0.9);
}
.navbar-light .navbar-brand:hover,.navbar-light .navbar-brand:focus {
	color:rgba(0,0,0,0.9);
}
.navbar-light .navbar-nav .nav-link {
	color:rgba(0,0,0,0.5);
	font-size: .93rem;
}
.navbar-light .navbar-nav .nav-link:hover,.navbar-light .navbar-nav .nav-link:focus {
	color:rgba(0,0,0,0.7);
}
.navbar-light .navbar-nav .nav-link.disabled {
	color:rgba(0,0,0,0.3);
}
.navbar-light .navbar-nav .show>.nav-link,.navbar-light .navbar-nav .active>.nav-link,.navbar-light .navbar-nav .nav-link.show,.navbar-light .navbar-nav .nav-link.active {
	color:rgba(0,0,0,0.9);
}
.navbar-light .navbar-toggler {
	color:rgba(0,0,0,0.5);
	border-color:rgba(0,0,0,0.1);
}
.navbar-light .navbar-toggler-icon {
	background-image:url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0,0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}
.navbar-light .navbar-text {
	color:rgba(0,0,0,0.5);
}
.navbar-light .navbar-text a {
	color:rgba(0,0,0,0.9);
}
.navbar-light .navbar-text a:hover,.navbar-light .navbar-text a:focus {
	color:rgba(0,0,0,0.9);
}
.bd-search .form-control {
	color:#999;
	width: 350px;
	border-radius:30px;
	border:1px solid #eee;
}
.mb-2rem {
	margin-bottom:2rem;
}
.jumbotron {
	background-size:cover;
	padding:7rem 1rem;
}
@media (min-width:992px) {
	.jumbotron-lg-withnav {
		padding-bottom:calc(10rem - 69.75px);
	}
	.jumbotron-lg {
		padding:10rem 0;
	}
	.jumbotron-xl {
		padding:15rem 0;
	}
	.jumbotron-xl {
		min-height:100vh;
	}
	.bottom-align-text-absolute {
		position:absolute;
		bottom:30px;
		margin:auto;
		left:0;
		right:0;
	}
    .jumbotron-home h1 {
        font-family: Georgia,Times,"Times New Roman",serif;
        font-size: 2.4rem;
        font-weight: 700;
        line-height: 1.1;
    }
}
.bg-black {
	background-color:#000;
}
.overlay {
	position:relative;
}
.overlay .container {
	position:relative;
}
/* ... */

